--- a/pen-pal/src/components/FriendsList.css
+++ b/pen-pal/src/components/FriendsList.css
@@ -9,8 +9,8 @@
   font-size: 30px;
   margin-right: 300px;
 }
-.friends-card {
+/* .friends-card {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
+} */
